--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,6 +1,10 @@
 *, ::before ::after{
     box-sizing: border-box;
  }
+
+ html{
+    scroll-behavior: smooth;
+ }
  
  body{
    margin: 0;
@@ -17,12 +21,15 @@
     box-shadow: 0 10px 10px rgb(0, 0, 0, 0.9);
     position: fixed;
     z-index: 100;
+    font-family: "Viga";
+    text-transform: uppercase;
  }
  .contItems{
     font-size: 20px;
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: space-around;
  }
 
  .items{
@@ -32,7 +39,7 @@
  }
  
  .items:hover{
-    color: blue;
+    color: #0084ff;
  }
 
  @media screen and (max-width: 700px){
@@ -56,7 +63,24 @@
      display: flex;
      flex-direction: column;
      align-items: center;
-    
+     font-family: "Unlock";
+ }
+div .button{
+    margin-block: 80px;
+}
+
+ div.button a{
+    text-decoration: none;
+    color: #0084ff;
+    background-color: #f1ead0;
+    padding: 1.5em 1.5em;
+    border-radius: 0.5em;
+    font-family: "Viga";
+ }
+
+ div.button a:hover{
+    color: #fff;
+    background-color: #0084ff;
  }
 
  h1{
@@ -66,6 +90,7 @@
      font-size: 70px;
      position: relative;
      color: aliceblue;
+     font-family: "Unlock";
  }
 
  h1::first-letter{
@@ -120,6 +145,7 @@
     text-align: center;
     font-size: 40px;
     padding-top: 20px;
+    font-family: "Unlock";
 }
 
 .txtImg{
@@ -205,6 +231,7 @@ hr{
     text-align: center;
     font-size: 40px;
     padding-bottom: 10px;
+    font-family: "Unlock";
 }
 
 @media screen and (max-width: 550px){
@@ -259,18 +286,21 @@ hr{
     font-size: 50px;
     color: white;
     text-align: center;
+    font-family: "Unlock";
  }
 
  /*Section formulaire*/
 
  .titreForm{
      text-align: center;
+     font-family: "Unlock";
  }
  .formulaire{
      width: 100%;
      display: flex;
      justify-content: center;
      margin-bottom: 50px;
+     font-family: "Viga";
  }
 
 form{
@@ -294,12 +324,14 @@ textarea{
 }
 
 .subBtn{
-    width: 40%;
+    width: 30%;
     margin: 0 auto;
     display: block;
     cursor: pointer;
     transition: all 0.2s ease;
     font-size: 20px;
+    font-family: "Viga";
+    background-color: #f1ead0;
 }
 
 .subBtn:hover{
@@ -330,4 +362,5 @@ footer{
     padding-top: 20px;
     font-size: large;
     align-items: center;
+    font-family: "Viga";
 }
