--- a/Styles/style.css
+++ b/Styles/style.css
@@ -45,19 +45,23 @@
  @media screen and (max-width: 700px){
      .navbar{
          display: block;
+         height: 50px;
      }
      .contItems{
-         display: none;
+         display: flex;
+         flex-direction: column;
+         font-size: 0.5em;
      }
+    
  }
 
  /*accueil*/
 
  .accueil{
      width: 100%;
-     height: 800px;
+     height: 90vh;
      background-color: dimgray;
-     background-image: url("../Ressources/17.jpg");
+     background-image: url("../Ressources/back.jpg");
      background-position: center;
      background-size: cover;
      display: flex;
@@ -84,7 +88,7 @@ div .button{
  }
 
  h1{
-   
+    margin-top: 100px;
      text-align: center;
      padding-top: 200px;
      font-size: 70px;
@@ -109,6 +113,21 @@ div .button{
    .accueil h1{
         font-size: 50px;
     }
+
+    .sousTitreP{
+        font-size: 20px;
+    }
+    .accueil{
+        position: relative;
+    }
+    div .button a{
+        font-size: 4px;
+        position: absolute;
+        top: 90%;
+        left: 45%;
+    }
+   
+   
 }
 
 @media screen and (max-width: 750px){
@@ -121,6 +140,7 @@ div .button{
     .sousTitreP{
         font-size: 15px;
     }
+
 }
 
 @media screen and (max-width: 500px){
@@ -154,8 +174,11 @@ div .button{
     display: flex;
     justify-content: center;
     border-bottom: 1px dashed lightskyblue;
+}
 
-
+.ImgPort:hover{
+    opacity: 1;
+    cursor: pointer;
 }
 
 .txtImg .flexContainerSection1{
@@ -168,11 +191,14 @@ div .button{
     width: 45%;
     margin: 20px;
 }
+.contImgSec1 img{
+    opacity: 0.9;
+}
 
 img{
     width: 100%;
     height: auto;
-    border-radius: 5px;
+    border-radius: 0.5em;
     box-shadow: 0 10px 10px rgba(155, 155, 155, 0.9);       
 }
 
@@ -180,8 +206,12 @@ img{
     width: 45%;
     background-color: lightskyblue;
     margin: 20px;
-    border-radius: 5px;
+    border-radius: 0.5em;
     box-shadow: 0 10px 10px rgba(155, 155, 155, 0.9);
+}
+.contImgSec1 img:hover{
+    opacity: 1;
+    cursor: pointer;
 }
 
 .contTxtSec1 h2{
@@ -261,20 +291,21 @@ hr{
     margin: 20px;
     height: 370px;
     overflow: hidden;
-    border-radius: 5px;
+    border-radius: 0.5em;
     box-shadow: 0 10px 10px rgba(155, 155, 155, 0.9);
+    opacity: 0.9;
 }
  img{
      width: 100%;
      height: auto;
-     border-radius: 5px;
+     border-radius: 0.5em;
 
  }
 
  .paraScroll{
      width: 100%;
-     height: 300px;
-     background-image: url("../Ressources/J.jpg");
+     height: 400px;
+     background-image: url("../Ressources/nature.jpg");
      background-size: cover;
      background-repeat: no-repeat;
      background-attachment: fixed;
@@ -304,7 +335,7 @@ hr{
  }
 
 form{
-    width: 60%;
+    width: 50%;
 }
 
 .row{
@@ -324,7 +355,7 @@ textarea{
 }
 
 .subBtn{
-    width: 40%;
+    width: 35%;
     margin: 0 auto;
     display: block;
     cursor: pointer;
@@ -347,7 +378,7 @@ textarea{
     width: 100%;
     padding: 20px;
     border: 2px solid rgb(0, 115, 255);
-    border-radius: 5px;
+    border-radius: 0.5em;
     background: rgb(76, 240, 117);
 
 }
