--- a/Styles/style.css
+++ b/Styles/style.css
@@ -61,7 +61,7 @@
      width: 100%;
      height: 100vh;
      background-color: dimgray;
-     background-image: url("../Ressources/feuille.jpg");
+     background-image: url("../Ressources/ciel.jpg");
      background-position: center;
      background-size: cover;
      display: flex;
