--- a/Styles/style.css
+++ b/Styles/style.css
@@ -91,7 +91,7 @@ div .button{
  }
 
  h1{
-    margin-top: 100px;
+     margin-top: 10rem;
      text-align: center;
      padding-top: 200px;
      font-size: 70px;
@@ -101,12 +101,12 @@ div .button{
  }
 
  h1::first-letter{
-     font-size: 100px;
+     font-size: 10rem;
 
  }
 
  .sousTitreP{
-     margin-top:0;
+    margin-top:0;
     color: aliceblue;
     font-size: 30px;
     text-align: center;
