--- a/Styles/style.css
+++ b/Styles/style.css
@@ -16,12 +16,8 @@
    .navbar{
     width: 100%;
     height: 150px;
-    background: whitesmoke;
     display: flex;
     justify-content: center;
-    box-shadow: 0 10px 10px rgb(0, 0, 0, 0.9);
-    position: fixed;
-    z-index: 100;
     font-family: "Viga";
     text-transform: uppercase;
  }
@@ -33,26 +29,46 @@
  }
 
  .items{
-    margin-right: 30px;
+   font-size: 1rem;
     text-decoration: none;
-    color: black;
+    color: #fff;
+    padding: 1.2rem;
  }
  
  .items:hover{
-    color: #0084ff;
+    background-color: #fff;
+    color: #0468ff;
+    border-radius: 0.5em;
  }
 
  @media screen and (max-width: 700px){
      .navbar{
          display: block;
-         height: 50px;
+         height: 10px;
      }
      .contItems{
          display: flex;
          flex-direction: column;
-         font-size: 0.5em;
+         font-size: 1em;
+     }
+
+     h1{
+       position: absolute;
+       top: -15%;
+       
+     }
+     .sousTitreP{
+       position: absolute;
+       /* top: -70%; */
+       bottom: -10%;
      }
     
+ }
+
+ .wrapper{
+    background-image: url("../Ressources/ciel.jpg");
+    background-position: center;
+    background-size: cover;
  }
 
  /*accueil*/
@@ -60,10 +76,6 @@
  .accueil{
      width: 100%;
      height: 100vh;
-     background-color: dimgray;
-     background-image: url("../Ressources/ciel.jpg");
-     background-position: center;
-     background-size: cover;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -153,14 +165,19 @@ div .button{
         height: 500px;
         align-items: flex-start;
     }
+
     h1{
         margin: 0px 20px;
+        position: absolute;
+        top: -5%;
     }
     h1::first-letter{
         font-size: 50px;
     }
     .sousTitreP{
         margin: 0px 20px;
+        position: absolute;
+        top: -5%;
     }
     .row{
         display: flex;
